# lib-rcmath

./: README.md
src/rcmath/: CMakeLists.txt  package.xml
src/rcmath/include/rcmath/: rc_algebra_common.h  rc_algebra_common.h~
src/rcmath/src/rcmath/: rc_filter.c  rc_linear_algebra.c  rc_matrix.c  rc_polynomial.c  rc_quaternion.c  rc_ring_buffer.c  rc_vector.c
